update project files

--- a/LanguageExtForNewDevelopersTutorial.csproj
+++ b/LanguageExtForNewDevelopersTutorial.csproj
@@ -6,21 +6,105 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Tutorial01\**" />
     <Compile Remove="Tutorial02\**" />
     <Compile Remove="Tutorial03\**" />
     <Compile Remove="Tutorial04\**" />
     <Compile Remove="Tutorial05\**" />
+    <Compile Remove="Tutorial06\**" />
+    <Compile Remove="Tutorial07\**" />
+    <Compile Remove="Tutorial08\**" />
+    <Compile Remove="Tutorial09\**" />
     <Compile Remove="Tutorial0\**" />
+    <Compile Remove="Tutorial10\**" />
+    <Compile Remove="Tutorial11\**" />
+    <Compile Remove="Tutorial12\**" />
+    <Compile Remove="Tutorial13\**" />
+    <Compile Remove="Tutorial14\**" />
+    <Compile Remove="Tutorial15\**" />
+    <Compile Remove="Tutorial16\**" />
+    <Compile Remove="Tutorial17\**" />
+    <Compile Remove="Tutorial18\**" />
+    <Compile Remove="Tutorial19\**" />
+    <Compile Remove="Tutorial20\**" />
+    <Compile Remove="Tutorial21\**" />
+    <Compile Remove="Tutorial22\**" />
+    <Compile Remove="Tutorial23\**" />
+    <Compile Remove="Tutorial24\**" />
+    <Compile Remove="Tutorial25\**" />
+    <Compile Remove="Tutorial26\**" />
+    <Compile Remove="Tutorial27\**" />
+    <Compile Remove="Tutorial28\**" />
+    <Compile Remove="Tutorial29\**" />
+    <Compile Remove="Tutorial30\**" />
+    <Compile Remove="Tutorial31\**" />
+    <Compile Remove="Tutorial32\**" />
+    <EmbeddedResource Remove="Tutorial01\**" />
     <EmbeddedResource Remove="Tutorial02\**" />
     <EmbeddedResource Remove="Tutorial03\**" />
     <EmbeddedResource Remove="Tutorial04\**" />
     <EmbeddedResource Remove="Tutorial05\**" />
+    <EmbeddedResource Remove="Tutorial06\**" />
+    <EmbeddedResource Remove="Tutorial07\**" />
+    <EmbeddedResource Remove="Tutorial08\**" />
+    <EmbeddedResource Remove="Tutorial09\**" />
     <EmbeddedResource Remove="Tutorial0\**" />
+    <EmbeddedResource Remove="Tutorial10\**" />
+    <EmbeddedResource Remove="Tutorial11\**" />
+    <EmbeddedResource Remove="Tutorial12\**" />
+    <EmbeddedResource Remove="Tutorial13\**" />
+    <EmbeddedResource Remove="Tutorial14\**" />
+    <EmbeddedResource Remove="Tutorial15\**" />
+    <EmbeddedResource Remove="Tutorial16\**" />
+    <EmbeddedResource Remove="Tutorial17\**" />
+    <EmbeddedResource Remove="Tutorial18\**" />
+    <EmbeddedResource Remove="Tutorial19\**" />
+    <EmbeddedResource Remove="Tutorial20\**" />
+    <EmbeddedResource Remove="Tutorial21\**" />
+    <EmbeddedResource Remove="Tutorial22\**" />
+    <EmbeddedResource Remove="Tutorial23\**" />
+    <EmbeddedResource Remove="Tutorial24\**" />
+    <EmbeddedResource Remove="Tutorial25\**" />
+    <EmbeddedResource Remove="Tutorial26\**" />
+    <EmbeddedResource Remove="Tutorial27\**" />
+    <EmbeddedResource Remove="Tutorial28\**" />
+    <EmbeddedResource Remove="Tutorial29\**" />
+    <EmbeddedResource Remove="Tutorial30\**" />
+    <EmbeddedResource Remove="Tutorial31\**" />
+    <EmbeddedResource Remove="Tutorial32\**" />
+    <None Remove="Tutorial01\**" />
     <None Remove="Tutorial02\**" />
     <None Remove="Tutorial03\**" />
     <None Remove="Tutorial04\**" />
     <None Remove="Tutorial05\**" />
+    <None Remove="Tutorial06\**" />
+    <None Remove="Tutorial07\**" />
+    <None Remove="Tutorial08\**" />
+    <None Remove="Tutorial09\**" />
     <None Remove="Tutorial0\**" />
+    <None Remove="Tutorial10\**" />
+    <None Remove="Tutorial11\**" />
+    <None Remove="Tutorial12\**" />
+    <None Remove="Tutorial13\**" />
+    <None Remove="Tutorial14\**" />
+    <None Remove="Tutorial15\**" />
+    <None Remove="Tutorial16\**" />
+    <None Remove="Tutorial17\**" />
+    <None Remove="Tutorial18\**" />
+    <None Remove="Tutorial19\**" />
+    <None Remove="Tutorial20\**" />
+    <None Remove="Tutorial21\**" />
+    <None Remove="Tutorial22\**" />
+    <None Remove="Tutorial23\**" />
+    <None Remove="Tutorial24\**" />
+    <None Remove="Tutorial25\**" />
+    <None Remove="Tutorial26\**" />
+    <None Remove="Tutorial27\**" />
+    <None Remove="Tutorial28\**" />
+    <None Remove="Tutorial29\**" />
+    <None Remove="Tutorial30\**" />
+    <None Remove="Tutorial31\**" />
+    <None Remove="Tutorial32\**" />
   </ItemGroup>
 
   <ItemGroup>
